--- a/src/index.html
+++ b/src/index.html
@@ -230,8 +230,6 @@
                     export PEACEMAKR_APIKEY=d1Maw58P2xCQ8d0GV15n22SQNI6lYXHzWLCTEvNPHnY=
                     <br>
                     echo "Hello Secure World" | peacemakr -encrypt
-
-
                 </span>
                 </div>
 
@@ -260,14 +258,84 @@ echo "Hello Secure World" | peacemakr -encrypt`;
                         </svg>
                     </a>
                 </div>
-            
     </div>
 
+    <!-- CONTROL PANEL SCREEN SHOTS -->
+
+    <div class="bg-gray-50">
+  <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24">
+    <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
+      <div class="space-y-5 sm:space-y-4">
+        <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Meet Your New Security Control Panel</h2>
+        <p class="text-xl text-gray-500">One of the reasons data security is difficult, is because we tend to ship hard-coded algorithms, key lengths, modes of operations, and other configurations. With Peacemakr, all security configurations are centrally managed and control behind a single pane of glass.</p>
+      </div>
+      <div class="lg:col-span-2">
+        <ul class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:gap-x-8">
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Secure By Default</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Even if you never change a single setting, we got you covered.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Powerful Visibility</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Quickly identify who or what has access to protected data.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Zero-Trust Ready</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">You should never have to trust your securit provider for security.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="space-y-4">
+              <div class="aspect-w-3 aspect-h-2">
+                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
+              </div>
+              <div class="text-lg leading-6 font-medium space-y-1">
+                <p class="text-indigo-600">Customizable Security Policy</p>
+              </div>
+              <div class="text-lg">
+                <p class="text-gray-500">Your Security Policies govern how often keys automatically rotate.</p>
+              </div>
+            </div>
+          </li>
+
+          <!-- More items... -->
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 grid lg:grid-cols-2 lg:gap-x-8">
             
             <div class="box-border h-50 w-300 p-4 lg:col-span-2">
-                <!-- This example requires Tailwind CSS v2.0+ -->
                 <div class="py-12">
                   <div class="max-w-8xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="mt-10">
@@ -306,6 +374,7 @@ echo "Hello Secure World" | peacemakr -encrypt`;
 
         </div>
     </div>
+-->
 
     <!-- CTA Data Security Assessment -->
     <div class="bg-white">
