--- a/src/index.html
+++ b/src/index.html
@@ -394,14 +394,15 @@
     </div>
 -->
 
-    <!-- CTA Data Security Assessment -->
+    <!-- CTA See Plans -->
     <div class="bg-white">
-        <div
-                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">Start with our <span class="block text-indigo-600 xl:inline">free tier</span>, today.</span>
-            </h2>
-            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Unlimited encryptions and decryptions operations, with 1000 API calls / Month.</p>
+        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+            <div>
+                <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                    <span class="block">Start with our <span class="block text-indigo-600 xl:inline">free tier</span>, today.</span>
+                </h2>
+                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryptions and decryptions operations, 1,000 API Calls per Month, and Bronze support.</p>
+            </div>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
                     <a href="#"
