--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Peacemakr | Peacemakr</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
     <meta property="og:title" content="Peacemakr"/>
     <meta property="og:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market.">
+          content="Data Security simplified.">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
 
     <!-- This is for the typing text annomation -->
@@ -212,7 +211,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-2 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
+                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
               </div>
               <div class="text-lg leading-6 font-medium space-y-1">
                 <p class="text-indigo-600">Secure By Default</p>
@@ -225,7 +224,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot3.png" alt="">
+                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
               </div>
               <div class="text-lg leading-6 font-medium space-y-1">
                 <p class="text-indigo-600">Powerful Visibility</p>
@@ -238,7 +237,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot1.png" alt="">
+                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
               </div>
               <div class="text-lg leading-6 font-medium space-y-1">
                 <p class="text-indigo-600">Zero-Trust Ready</p>
@@ -251,7 +250,7 @@
           <li>
             <div class="space-y-4">
               <div class="aspect-w-3 aspect-h-2">
-                <img class="object-cover rounded-lg" src="./images/screenshot2.png" alt="">
+                <img class="object-cover rounded-lg" src="./images/screenshot4.png" alt="">
               </div>
               <div class="text-lg leading-6 font-medium space-y-1">
                 <p class="text-indigo-600">Customizable Security Policy</p>
