--- a/src/navigation.html
+++ b/src/navigation.html
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a>
+                    <!-- <a href="/pricing.html" class="font-medium text-gray-500 hover:text-indigo-600">Pricing</a> -->
                 </nav>
                 <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
                     <a href="https://admin.peacemakr.io/#/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
@@ -186,9 +186,9 @@
                             Security Talks
                         </a>
 
-                        <a href="/pricing.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
+                        <!-- <a href="/pricing.html" class="text-base font-medium text-gray-900 hover:text-gray-700">
                             Pricing
-                        </a>
+                        </a> -->
                     </div>
                     <div>
                         <a href="https://admin.peacemakr.io/#/signup" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
