--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Peacemakr: Protect your data with simple, proven, and affordable E2E-Encryption-as-a-Service</title>
-    <meta name="description" content="Peacemakr provides easy-to-use SDKs to help companys secure data, stick with compliance, and stop data breaches.">
+    <title>Peacemakr: policy-based data protection</title>
+    <meta name="description" content="Simple, proven, and open-source solutions that automatically protect data according to security policies for any regulation">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
