--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg">
-                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source solutions</a> that use security policies to protect data for <a href="./solutions.html" class="gray_link">any regulation</a>
+                     <a href="https://github.com/peacemakr-io" class="gray_link">Simple, proven, and open-source encryption solutions</a> that use security policies to protect data for <a href="./solutions.html" class="gray_link">any regulation</a>
                 </p>
             </div>
 
@@ -157,9 +157,9 @@
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <div>
                 <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    <span class="block">Start with our <span class="text-indigo-600">free tier</span> today</span>
+                    <span class="block">Signup for <span class="text-indigo-600">free</span> today</span>
                 </h2>
-                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Includes unlimited clients, unlimited encryption and decryption operations, 1,000 API Calls per month, and Bronze support.</p>
+                <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0"></p>
             </div>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
@@ -460,10 +460,9 @@
             <span class="block">Ready to protect your data?</span>
             <span class="block"></span>
           </h2>
-          <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are made possible by human error.</p>
+          <p class="mt-4 text-lg leading-6 text-indigo-200">Learn the most common data protection opportunities and how Peacemakr works with your infrastructure and products to stop data breaches.</p>
           <br>
-          <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr eliminates the guesswork. </p>
-          <a href="https://admin.peacemakr.io/#/signup" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
+          <a href="https://admin.peacemakr.io/#/signup" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Schedule a Free Data Security Risk Assessment</a>
         </div>
       </div>
       <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
