--- a/src/solutions/iot-data-protection.html
+++ b/src/solutions/iot-data-protection.html
@@ -8,18 +8,18 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link rel="stylesheet" href="../styles.css">
     <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
-    <meta property="og:title" content="Peacemakr"/>
+    <meta property="og:title" content="IoT Data Protection"/>
     <meta property="og:description"
-          content="Data Security simplified."/>
+          content="..."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/solutions.html"/>
-    <meta itemprop="name" content="Peacemakr">
+    <meta itemprop="name" content="IoT Data Protection">
     <meta itemprop="description"
-          content="Data Security simplified.">
+          content="...">
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Peacemakr"/>
+    <meta name="twitter:title" content="IoT Data Protection"/>
     <meta name="twitter:description"
-          content="Data Security simplified."/>
+          content="..."/>
     <script src="../navbar.js" type="text/javascript"></script>
     <script src="../risk_calculator.js" type="text/javascript"></script>
 
@@ -97,15 +97,15 @@
         <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
           <div class="lg:w-0 lg:flex-1">
             <h2 class="text-3xl font-extrabold tracking-tight text-white">
-              You deserve real security,<br> not just a checkbox.
+              IoT devices need data protection, too.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Take 30-minutes to learn how Peacemakr eliminates data breaches in Finance, Healthcare, Defense, and Insurance.
+              Peaceamkr works on every IoT platform with minimalist performacne and battery life impacts.
             </p>
           </div>
           <div class="lg:flex-1 items-center justify-center">
             <a href="https://calendly.com/peacemakr" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white mt-0 ml-3 w-auto flex-shrink-0">
-              Schedule a 30-Minute Demo
+              Schedule a 30-Minute IoT Data Protection Demo
             </a>
           </div>
         </div>
@@ -126,8 +126,10 @@
       <div class="absolute inset-0 bg-gray-800 mix-blend-multiply" aria-hidden="true"></div>
     </div>
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
-      <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is Data Security Broken?</h1>
+      <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is IoT Data Security Difficult?</h1>
       <p class="mt-6 max-w-3xl text-xl text-gray-300">TLS and Encryption-at-Rest are necessary data security tools, but they do not stop an adversary that breaks into your system from stealing data.</p>
+
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Further, IoT platforms themselves are resource constrained, and required optimized compilers, code, and minimal libraries - traditionally a very difficult combination to find with encryption libraries.</p>
     </div>
   </div>
 
@@ -171,245 +173,27 @@
 
 
 
-
-<style>
-/* Tooltip container */
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
- 
-  /* Position the tooltip text - see examples below! */
-  position: absolute;
-  z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-}
-</style>
-
-
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-gray-50 pt-12 sm:pt-16">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-extrabold text-gray-900 sm:text-4xl">
-        Estimate the Cost of a Data Breach
-      </h2>
-      <p class="mt-3 text-xl text-gray-500 sm:mt-4">
-        In addition to irreparable damage to your reputation, penal regulatory fines may apply, while total remediation time and cost can be estimated from historical data.
-      </p>
-    </div>
-  </div>
-
-
-  <div class="mt-10 pb-12 bg-gray-50 sm:pb-16">
-    <div class="relative">
-      <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="max-w-4xl mx-auto">
-          <dl class="rounded-lg bg-gray-50 shadow-lg sm:grid sm:grid-cols-2">
-            <div class="flex flex-col border-b border-gray-100 p-6 text-center sm:border-0 sm:border-r">
-              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                Record Type
-              </dt>
-              <form>
-                <input type="range" min="1" max="8" value="1" class="slider" id="data_type_bar" oninput="showVal()" onchange="showVal()">
-              </form>
-              <dd id="data_type_display" class="order-1 text-3xl font-extrabold text-gray-900">
-                HIPAA Protected Health Information
-              </dd>
-            </div>
-            <div class="flex flex-col border-t border-b border-gray-100 p-6 text-center sm:border-0 sm:border-l sm:border-r">
-              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                Total Records Breached
-              </dt>
-              <form>
-                <input type="range" min="1" max="1000000" value="50000" class="slider" id="total_records_bar" oninput="showVal()" onchange="showVal()">
-              </form>
-              <dd id="total_records_display" class="order-1 text-3xl font-extrabold text-gray-900">
-                50,000
-              </dd>
-            </div>
-          </dl>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <div class=" pb-12 bg-gray-50 sm:pb-16">
-    <div class="relative">
-      <div class="absolute inset-0 h-1/2 bg-gray-50"></div>
-      <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="max-w-4xl mx-auto">
-          <dl class="rounded-lg bg-gray-50 shadow-lg sm:grid sm:grid-cols-3">
-            <div class="flex flex-col border-b border-gray-100 p-6 text-center sm:border-0 sm:border-r">
-              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                Est. Remediation Time
-              </dt>
-              <dd id="estimated_days_display" class="order-1 text-4xl font-extrabold text-red-700">
-                279 Days
-              </dd>
-            </div>
-            <div class="flex flex-col border-t border-b border-gray-100 p-6 text-center sm:border-0 sm:border-l sm:border-r">
-              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                Est. Fines
-              </dt>
-              <dd id="estimated_fines_display" class="order-1 text-4xl font-extrabold text-red-700">
-                $1,300,000
-              </dd>
-            </div>
-            <div class="flex flex-col border-t border-gray-100 p-6 text-center sm:border-0 sm:border-l">
-              <dt class="order-2 mt-2 text-lg leading-6 font-medium text-gray-500">
-                Est. Remediation Cost
-              </dt>
-              <dd id="estimated_cost_display" class="order-1 text-4xl font-extrabold text-red-700">
-                $8,800,000
-              </dd>
-            </div>
-          </dl>
-          <p class="mt-3 text-sm text-center text-gray-700 sm:mt-4">
-              More detailed analysis available upon request.
-            </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="relative bg-indigo-600">
-  <div class="absolute inset-0">
-    <img class="w-full h-full object-cover" src="/images/team-hands.png" alt="">
-    <div class="absolute inset-0 bg-indigo-600 mix-blend-multiply" aria-hidden="true"></div>
-  </div>
-  <div class="text-center relative max-w-9xl mx-auto py-34 px-4 sm:py-32 sm:px-6 lg:px-8">
-    <h1 class="text-5xl text-tight font-extrabold text-white sm:text-5xl lg:text-6xl"> E2E-Encryption Stop Breaches</h1>
-    <p class="mt-6 text-xl text-indigo-100 mx-auto max-w-4xl">Peacemakr's E2E-Encryption-as-a-Service stops data breaches by keeping your data encrypted for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</p>
-  </div>
-</div>
-
-
-
-
-
-
-
-    <div class="py-12 bg-white">
+<div class="py-12 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="md:text-center">
-      <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        Pass Audits with Confidence
+      <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-6xl">
+        Only E2E-Encryption Stop Breaches
       </p>
       <div class="flex md:justify-center">
-        <div class="mt-4 max-w-sm md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
-              Win new customers in regulated industries, without runaway costs or risky delays.</div>
+        <div class="mt-4 max-w-2xl md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
+              E2E-Encryption stops data breaches by keeping your data protected for its entire lifecycle, instead of just when it moves between systems (TLS) or resides on a persistence layer (Encryption-at-Rest).</div>
             </div>
               <br>
       <p class="mt-4 max-w-2xl text-xl text-left text-gray-500 lg:mx-auto">
         <!-- Peacemakr's E2E-Encryption-as-a-Service unifies your data security behind a simple open-source interface. This enables engineers to quickly integrate end-to-end data security across all your products and services, faster than any other solution. When your security requirements change, simply update your security policies in your Security Control Panel and Peacemakr update your entire ecosystem. -->
       </p>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <div class="mt-10">
-      <dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Heroicon name: outline/globe-alt -->
-             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11c0 3.517-1.009 6.799-2.753 9.571m-3.44-2.04l.054-.09A13.916 13.916 0 008 11a4 4 0 118 0c0 1.017-.07 2.019-.203 3m-2.118 6.844A21.88 21.88 0 0015.171 17m3.839 1.132c.645-2.266.99-4.659.99-7.132A8 8 0 008 4.07M3 15.364c.64-1.319 1-2.8 1-4.364 0-1.457.39-2.823 1.07-4" />
-</svg>
-              </svg>
-            </div>
-          </div>
-          <div class="ml-4">
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              GDPR, CCPA, SHIELD, and Personally Identifiable Information
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-              Privacy legislation calls for businesses to use industry-standard best practices to protect personally identifiable information. Peacemakr's E2E-Encryption aligns perfectly with the intentions behind these data security laws. By raising the security bar and lowering the barrier to entry, we set the data protection standard for modern applications.
-            </dd>
-          </div>
-        </div>
-
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Heroicon name: outline/scale -->
-
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-</svg>
-            </div>
-          </div>
-          <div class="ml-4">
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              Healthcare, Pharmaeuticals, and HIPAA
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-              We must protect patient data and industry secrets, but there is no standard for encrypting all of this data. Peacemakr's E2E-Encryption fits the bill by providing a consistent and robust drop-in solution to meet these rigorous standards. Pass any data security audit quickly, and secure new partnerships without increasing your time-to-market.
-
-            </dd>
-          </div>
-        </div>
-
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Heroicon name: outline/lightning-bolt -->
-              <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-</svg>
-            </div>
-          </div>
-          <div class="ml-4">
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              Insurance and NAIC Data Security Requirements
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-              Insurers, Insurance Producers, Regulated Entities, and State Insurance Regulators all require service providers to have controls in place to protect data. Peacemakr's E2E-Encryption guarantees compliance and facilitates business collaborations that would otherwise be out of reach.
-            </dd>
-          </div>
-        </div>
-
-        <div class="flex">
-          <div class="flex-shrink-0">
-            <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Heroicon name: outline/annotation -->
-              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z" />
-              </svg>
-            </div>
-          </div>
-          <div class="ml-4">
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              Financial Institutions
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-              The data security requirements to service the top players in this vertical are the most rigorous and challenging. Different institutions have different needs, leaving vendors lost in a complex and dynamic space. Peacemakr has identified all common denominators, built the generic solution, and delivered drop-in solutions for vendors.
-            </dd>
-          </div>
-        </div>
-      </dl>
-    </div>
-  </div>
-</div>
 
 <div class="relative bg-gray-800">
   <div class="h-56 bg-indigo-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2">
@@ -424,7 +208,7 @@
         And we’re here to help
       </p>
       <p class="mt-3 text-lg text-gray-300">
-        Even though Peacemakr is a powerful and generic solution, it may not be obvious how it applies to your specific data security challenges. We'd love an opportunity to learn more about your particular business needs and work with you on how you might best approach those data security challenges.
+        Peacemakr is an IoT-ready E2E-Encryption solution, but it may not be obvious how it applies to your device. We'd love an opportunity to learn more about your business and work with you on how you might turn your data protection challenges into solutions, quickly.
       </p>
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
